<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Non-translatable strings -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">nukus</string>
    <string name="pref_last_notification" translatable="false">last_sync</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_default" translatable="false">false</string>
    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_notification" translatable="false">
        <xliff:g id="date">%1$s</xliff:g>: <xliff:g id="high">%2$s</xliff:g> / <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="content_authority" translatable="false">"com.shagalalab.weather"</string>
    <string name="pref_interface_key" translatable="false">interface</string>
    <string name="pref_interface_default" translatable="false">cyrillic</string>
    <string name="pref_widget_location_key" translatable="false">location_widget</string>
    <string name="pref_widget_interface_key" translatable="false">widget_interface</string>
    <string name="pref_update_key" translatable="false">widget_update</string>
    <string name="pref_update_default" translatable="false">manual</string>

    <!-- Translatable strings -->
    <string name="app_name">Hawa Rayi</string>
    <string name="action_settings">Сазлаўлар</string>
    <string name="action_share">Бөлисиў</string>
    <string name="action_refresh">Жаңалаў</string>
    <string name="title_activity_detail">Толық</string>
    <string name="title_activity_settings">Сазлаўлар</string>
    <string name="pref_location_label">Қала</string>
    <string name="pref_enable_notifications_label">Ҳаўа райы хабарландырыӯы</string>
    <string name="pref_enable_notifications_true">Қосылған</string>
    <string name="pref_enable_notifications_false">Өширилген</string>
    <string name="today">Бүгин</string>
    <string name="tomorrow">Ертең</string>
    <string name="format_wind_kmh">
        Самал: <xliff:g id="speed">%1$1.0f</xliff:g> м/с, <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="wind_direction_north">арқа</string>
    <string name="wind_direction_north_east">арқа-шығыс</string>
    <string name="wind_direction_east">шығыс</string>
    <string name="wind_direction_south_east">қубла-шығыс</string>
    <string name="wind_direction_south">қубла</string>
    <string name="wind_direction_south_west">қубла-батыс</string>
    <string name="wind_direction_west">батыс</string>
    <string name="wind_direction_north_west">арқа-батыс</string>
    <string name="format_pressure">Басым: <xliff:g id="pressure">%1.0f</xliff:g> мм. сынап бағанасы</string>
    <string name="format_humidity">Ығаллық: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>
    <string name="format_share">
        <xliff:g id="city">%1$s</xliff:g> ушын ҳаӯа райы: <xliff:g id="dateText">%2$s</xliff:g>, <xliff:g id="description">%3$s</xliff:g>,
        <xliff:g id="highString">%4$s</xliff:g>/<xliff:g id="lowString">%5$s</xliff:g>
    </string>
    <string name="format_notification_title"><xliff:g id="city">%1$s</xliff:g> ушын ҳаўа райы</string>
    <string name="format_last_updated">Ақырғы жаңаланған ўақыт: <xliff:g id="time">%1$s</xliff:g></string>

    <string name="storm">Дүбелей</string>
    <string name="light_rain">Киши жаӯын</string>
    <string name="rain">Жаӯын</string>
    <string name="snow">Қар</string>
    <string name="fog">Думан</string>
    <string name="clear">Ашық аспан</string>
    <string name="light_clouds">Бултлы</string>
    <string name="cloudy">Бултлы</string>

    <string name="no_network_no_data">Интернет байланысы табылмады. Интернетке қосылғаныңызда, бағдарламаны қайта жүклең, ямаса \'Жаңалаӯ\' менюинен пайдаланың.</string>
    <string name="no_network">Интернет байланысы табылмады. Интернетке қосылғаныңызда, қайтадан ҳәрекет етип көриң.</string>

    <string name="pref_interface_label">Бағдарлама интерфейси</string>

    <string name="title_widget_settings">Widget сазлаўлары</string>
    <string name="pref_widget_interface_label">Widget интерфейси</string>
    <string name="pref_update">Бағдарламаның жаңаланыӯ жийилиги</string>

    <string name="create_widget">Widget жаратыӯ</string>

    <string name="preference_setting_cancel">Бийкар етиӯ</string>

    <string name="action_about">Ҳаққында</string>
    <string name="action_other_apps">Басқа жумысларымыз</string>
    <string name="title_activity_about">Бағдарлама ҳаққында</string>

    <string name="about_title">Android мобиль операцион системасы ушын ҳаӯа райы бағдарламасы</string>
    <string name="about_app_name">Hawa Rayi v.1.0\n\n by</string>
    <string name="about_developer">Shag\'ala Lab</string>
    <string name="about_content_source">Hawa Rayi ― ашық-дерекли (open-source) <a href="https://github.com/udacity/Sunshine">Sunshine</a> бағдарламасына тийкарланған болып, Sunshine\'нан өзгешилиги қарақалпақ тилиндеги интерфейс ҳәм Қарақалпақстан қалаларындағы ҳаӯа райын көриӯ мүмкиншилиги қосылған. Бағдарламаның өзи де ашық-дерекли болып, қәлеӯшилер яки үлес қосаман дейтуғынлар дерегин <a href="https://github.com/shagalalab/HawaRayiApp">https://github.com/shagalalab/HawaRayiApp</a> адресине өтиӯ арқалы көриӯи мүмкин.</string>
    <string name="about_contact">Бағдарлама жаратыӯшылары менен info@shagalalab.com email адресине хат жазыӯ, ямаса www.shagalalab.com сайтындағы \'Байланыс\' бетинде жайласқан форманы толтырыӯ арқалы байланысыӯыңызға болады.</string>

</resources>
