<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:text="@string/about_title"
            style="@style/AboutTextViews" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_app_name"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/about_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/about_developer"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/description"
            android:text="@string/about_content_source"
            style="@style/AboutTextViews" />

        <TextView
            android:text="@string/about_contact"
            style="@style/AboutTextViews"
            android:autoLink="all" />

    </LinearLayout>

</ScrollView>